[gd_scene load_steps=7 format=2]

[ext_resource path="res://Data/Editor/Cursor/Cursor.gd" type="Script" id=1]
[ext_resource path="res://Streams/Sounds/Pop.wav" type="AudioStream" id=2]
[ext_resource path="res://Streams/Sounds/PlaceTile.wav" type="AudioStream" id=3]
[ext_resource path="res://Data/Editor/Cursor/Place.gd" type="Script" id=5]
[ext_resource path="res://Data/Editor/Cursor/Move.gd" type="Script" id=6]
[ext_resource path="res://Data/Editor/Cursor/Config.gd" type="Script" id=7]

[node name="Cursor" type="Node2D" groups=["Cursor"]]
self_modulate = Color( 1, 1, 1, 0.752941 )
script = ExtResource( 1 )

[node name="PlaceMode" type="Node" parent="."]
script = ExtResource( 5 )

[node name="PlaceObj" type="AudioStreamPlayer" parent="PlaceMode"]
stream = ExtResource( 3 )
bus = "Sound"

[node name="RemoveObj" type="AudioStreamPlayer" parent="PlaceMode"]
stream = ExtResource( 2 )
bus = "Sound"

[node name="MoveMode" type="Node" parent="."]
script = ExtResource( 6 )

[node name="ConfigMode" type="Node" parent="."]
script = ExtResource( 7 )
